# walberla_bridge

./: CMakeLists.txt  README.md
cmake/: unit_test.cmake
include/: CMakeLists.txt
include/utils/: CMakeLists.txt
include/walberla_bridge/: BlockAndCell.hpp  CMakeLists.txt
include/walberla_bridge/electrokinetics/: EKinWalberlaBase.hpp
include/walberla_bridge/lattice_boltzmann/: LBWalberlaBase.hpp
src/: CMakeLists.txt  LatticeWalberla.cpp
src/electrokinetics/: CMakeLists.txt  EKinWalberlaImpl.hpp
src/electrokinetics/generated_kernels/: CMakeLists.txt
src/electrokinetics/reactions/: CMakeLists.txt  EKReactionImplIndexed.cpp  EKReactionImplIndexed.hpp
src/electrokinetics/reactions/generated_kernels/: CMakeLists.txt
src/lattice_boltzmann/: CMakeLists.txt  LBWalberlaImpl.hpp
src/lattice_boltzmann/generated_kernels/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/serialization/: CMakeLists.txt
tests/: CMakeLists.txt  EKinWalberlaImpl_unit_tests.cpp  LBWalberlaImpl_bspline_tests.cpp  LBWalberlaImpl_flow_tests.cpp  LBWalberlaImpl_lees_edwards.cpp  LBWalberlaImpl_statistical_tests.cpp  LBWalberlaImpl_unit_tests.cpp  LatticeWalberla_unit_tests.cpp  kernels_unit_tests.cpp  tests_common.hpp  tests_common_ek.hpp  tests_common_lb.hpp
